added javascript karma tests to build lifecycle

--- a/readme.adoc
+++ b/readme.adoc
@@ -65,4 +65,7 @@ The Person factory uses a angularjs $resource. It shows how you can retrieve a s
 
 == Test and generate report
 
-./gradlew clean test jacoco
+Code coverage report for java is generated on:
+`./gradlew clean test jacoco`
+Code coverage report for javascript is generated on:
+`./gradlew clean karamRun`
