--- a/readme.adoc
+++ b/readme.adoc
@@ -68,4 +68,4 @@ The Person factory uses a angularjs $resource. It shows how you can retrieve a s
 Code coverage report for java is generated on:
 `./gradlew clean test jacoco`
 Code coverage report for javascript is generated on:
-`./gradlew clean karamRun`
+`./gradlew clean karmaRun`
