--- a/readme.adoc
+++ b/readme.adoc
@@ -93,3 +93,9 @@ result: build/coverage/PhantomJS%202.1.1%20(Mac%20OS%20X%200.0.0)/index.html
 
 unit test report:
 build/reports/tests/index.html
+
+== Swagger
+
+Find swagger documentation on-line:
+
+Point your browser to: `http://localhost:8080/swagger-ui.html`
