--- a/readme.adoc
+++ b/readme.adoc
@@ -102,7 +102,10 @@ Point your browser to: `http://localhost:8080/swagger-ui.html`
 
 == Application
 
-Point your browser to: `http://localhost:8080`
+You can start the application from your project directory with the command `gradle bootRun` or `./gradlew bootRun`. Alternatively you can build and run in from the build/lib directory using
+`java -jar -Dserver.port=8080 example-resource-1.0-SNAPSHOT.jar`. This way you can start a second instance on a different port number: `java -jar -Dserver.port=8081 example-resource-1.0-SNAPSHOT.jar`
+
+Point your browser to: `http://localhost:8080` or `http://localhost:8081`
 
 == Monitoring and metrics
 
@@ -117,3 +120,12 @@ Some example endpoints:
 * `http://localhost:8080/info` (info provided through `application.properties`)
 * `http://localhost:8080/health` (custom health using `CustomHealthCheck.java`)
 * `http://localhost:8080/server` (custom endpoint using `ServerEndpoint.java`)
+
+== Consul
+
+The application registers itself with Consul. It expects consul to run on `192.168.99.100:8500`. This can be configured in the
+`application.yml` and overwritten from the command line. Easy way to start a consul is using Docker:
+
+`docker run -p 8400:8400 -p 8500:8500 -p 8600:53/udp -h node1 progrium/consul -server -bootstrap -ui-dir /ui`
+
+You can then check if it's running and the app has registered itself using the following link: `http://192.168.99.100:8500`.
