--- a/readme.adoc
+++ b/readme.adoc
@@ -103,19 +103,26 @@ Point your browser to: `http://localhost:8080/swagger-ui.html`
 == Application
 
 You can start the application from your project directory with the command `gradle bootRun` or `./gradlew bootRun`.
-Alternatively you can build and run in from the build/lib directory using `java -jar -Dserver.port=8080
-example-resource-1.0-SNAPSHOT.jar`. This way you can start a second instance on a different port number: `java -jar
--Dserver.port=8081 example-resource-1.0-SNAPSHOT.jar`
+Alternatively you can build and run in from the build/lib directory using:
+`java -jar -Dserver.port=8080 example-resource-1.0-SNAPSHOT.jar`.
+
+This way you can start a second instance on a different port number:
+`java -jar -Dserver.port=8081 example-resource-1.0-SNAPSHOT.jar`
+
+To enable service discovery use:
+`java -jar -Dserver.port=8081 -Dspring.cloud.consul.discovery.enabled=true example-resource-1.0-SNAPSHOT.jar`
 
 Point your browser to: `http://localhost:8080` or `http://localhost:8081`
 
 == Monitoring and metrics
 
 Monitoring and metrics is provided using Spring Actuator. Access to the actuator endpoints is protected. Check
-`application.resources` for username/password and an example of the configuration. `http://localhost:8080/actuator`
-shows a list of all the available endpoints. To include this you need to add `spring-boot-starter-hateoas`. You can
-also implement it yourself, see `ShowEndpoints.java`. In that case a list if available at
-`http://localhost:8080/showEndPoints`.
+`application.resources` for username/password and an example of the configuration.
+
+* The list of all the available endpoints: `http://localhost:8080/actuator`;
+    To include this you need to add`spring-boot-starter-hateoas`.
+* You can also implement it yourself. Example implementation: `ShowEndpoints.java`.
+    In that case a list if available at: `http://localhost:8080/showEndPoints`.
 
 Some example endpoints:
 
